--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,4 +17,4 @@
     <h2><a target="_blank" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
 </ul>
-
+<card [value]="3" [suit]="2"></card>
